--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "e-commerce-mobile-app",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix admin && npm run build --prefix admin",
     "start": "npm run start --prefix backend"
