--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.58",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "e-commerce-mobile-app": "file:..",
     "express": "^5.2.1",
+    "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
 }
