Update vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,32 @@
 {
-  "buildCommand": "cd admin && npm run build",
-  "outputDirectory": "admin/dist",
-  "installCommand": "npm install --prefix admin"
+  "version": 2,
+  "builds": [
+    {
+      "src": "admin/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    },
+    {
+      "src": "backend/src/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/src/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "admin/dist/$1"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/((?!api/.*).*)",
+      "destination": "/index.html"
+    }
+  ]
 }
