--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/api"
+      "destination": "/backend/src/server"
     }
   ]
 }
