--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,22 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/src/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/src/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "admin/dist/$1"
+    }
+  ],
   "buildCommand": "npm run build",
   "outputDirectory": "admin/dist",
-  "installCommand": "npm install",
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/backend/src/server"
-    }
-  ]
+  "installCommand": "npm install"
 }
