--- a/admin/package.json
+++ b/admin/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.59.2",
+    "@vitejs/plugin-react": "^5.1.1",
     "e-commerce-mobile-app": "file:..",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1"
+    "vite": "^7.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
