--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "e-commerce-mobile-app": "file:..",
     "express": "^5.2.1",
+    "inngest": "^3.48.1",
     "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
